Completed the design and js

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1 class="title"> Score Board </h1>
 
         <div class="score">
-            <h2> Your Score : 0</h2>
-            <h2> Computer Score : 0</h2>
+            <h2 id="myScore"> Your Score : 0</h2>
+            <h2 id="computerScore"> Computer Score : 0</h2>
         </div>
 
         <div class="choice">
