Fix a little mistake in index.html

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
         <div class="choice">
             <div class="rock">
-                <img src="/assets/rock.png">
+                <img src="./assets/rock.png">
             </div>
             <div class="paper">
-                <img src="/assets/paper.png">
+                <img src="./assets/paper.png">
             </div>
             <div class="scissor">
-                <img src="/assets/scissor.jpg">
+                <img src="./assets/scissor.jpg">
             </div>
         </div>
 
